Fixing the grid layout bugs

--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,138 @@ a:hover i {
     transform-origin: bottom left;
 }
 
+/* 4. ---Mobile Menu--- */
+
+@keyframes bugfix {
+    from {
+        padding: 0;
+    }
+
+    to {
+        padding: 0;
+    }
+}
+
+@-webkit-keyframes bugfix {
+    from {
+        padding: 0;
+    }
+
+    to {
+        padding: 0;
+    }
+}
+
+#overlay-button {
+    position: absolute;
+    right: 1em;
+    padding: 38px 11px;
+    z-index: 5;
+    cursor: pointer;
+    user-select: none;
+}
+
+#overlay-button span {
+    height: 3px;
+    width: 25px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    position: relative;
+    display: block;
+    transition: all 0.2s ease-in-out;
+}
+
+#overlay-button span:before {
+    top: -7px;
+    visibility: visible;
+}
+
+#overlay-button span:after {
+    top: 7px;
+}
+
+#overlay-button span:before,
+#overlay-button span:after {
+    height: 3px;
+    width: 25px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    position: absolute;
+    content: "";
+    transition: all 0.2s ease-in-out;
+}
+
+#overlay-button:hover span,
+#overlay-button:hover span:before,
+#overlay-button:hover span:after {
+    background: #0057B8;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+input[type=checkbox]:checked~#overlay {
+    visibility: visible;
+}
+
+input[type=checkbox]:checked~#overlay-button:hover span,
+input[type=checkbox]:checked~#overlay-button span {
+    background: transparent;
+}
+
+input[type=checkbox]:checked~#overlay-button span:before {
+    transform: rotate(45deg) translate(5px, 5px);
+    opacity: 1;
+}
+
+input[type=checkbox]:checked~#overlay-button span:after {
+    transform: rotate(-45deg) translate(5px, -5px);
+}
+
+#overlay {
+    height: 100vh;
+    width: 100vw;
+    background: #E60012;
+    z-index: 2;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+}
+
+#overlay.active {
+    visibility: visible;
+}
+
+#overlay ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    height: 100vh;
+    padding-left: 0;
+    list-style-type: none;
+}
+
+#overlay ul li {
+    padding: .75em;
+}
+
+#overlay ul li a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 1.25em;
+}
+
+#overlay ul li a:hover {
+    color: #0057B8;
+}
+/* ---End of Mobile Menu--- */
+
+
 /* ---End of Header--- */
 
 
@@ -186,16 +318,6 @@ a:hover i {
 .audio-controls {
     text-align: center;
     padding: 0 10px 0 10px;
-}
-
-.track-ref {
-    padding: 8px 0 8px 0;
-    background-color: #ffffff;
-    border-radius: 10px;
-    transition: opacity .2s;
-    display: block;
-    margin: auto;
-    width: 80%;
 }
 
 .volumeControl {
@@ -208,33 +330,6 @@ a:hover i {
     opacity: 0;
 }
 
-.button-style {
-    background-color: #f7f7f7;
-    color: #0057B8;
-    width: 30px;
-    height: 30px;
-    position: relative;
-    text-align: center;
-    border: none;
-}
-
-.button-s {
-    border-radius: 50%;
-}
-
-.char-box {
-    width: 100%;
-    height: 80%;
-    display: block;
-}
-
-.track-ref {
-    display: none;
-}
-
-.characters-box:hover .track-ref {
-    display: block;
-}
 
 /* ---End of Characters--- */
 
@@ -281,15 +376,15 @@ footer {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 999;
     padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 /* Modal Content */
